# component_template_viewer

./: .gitignore  Dockerfile  actions.sh  alembic.ini  database.yaml  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml  test.py
.github/workflows/: develop.yml  production.yml
alembic/: env.py
alembic/versions/: 2ec235992a18_fix_title.py  5d679d16d36f_.py  5f84e8b40e39_new_field.py  c7a4e3a4193c_.py  d6110d96442f_.py  d633f780909f_.py  ee2bae46c5dd_.py  f8743d0d9259_.py
api/: database.py  main.py  models.py  schemas.py  security.py  services.py  settings.py  utils.py
api/bases/: descriptions.py  sqlalchemy_ext.py
api/events/: vpn_data_events.py
api/services/: vpn_data_event_srv.py
nginx/: local.default.conf
static/css/: landing_1.css  mobile_lending.css  reset.css
static/scripts/: index.js  script_1.js  script_2.js
static/scripts/utils/: animateSpeedometer.js
static/styles/: landing_1.css  landing_2.css  mobile_lending.css  mobile_lending_2.css  reset.css
templates/: landing_1.html
tests/: conftest.py
tests/api_tests/: test_api.py
